# vcfxplr

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  greetings.yml
vcfxplr/scripts/: main.py  vcfxplr.py
